--- a/STYLE.sty
+++ b/STYLE.sty
@@ -279,7 +279,9 @@
 
 \newcommand{\zz}{\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}}}
 
-
+\newcommand{\diff}[2]{
+  \dfrac{\text{d} #1}{\text{d} #2}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Kapitel-Titel
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1.2ex \hfill \kern \z@}
