--- a/kap4.tex
+++ b/kap4.tex
@@ -262,19 +262,18 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
     \left\{\begin{array}{rccl}
       2\cos(x)  &=  &0  & \\
       1+\sin(x) &=  &0  &
-    \end{array} \\
+    \end{array} \right.\\
     \Leftrightarrow
     \left\{ \begin{array}{rccl}
       \cos(x) & = & 0 \\
       \sin(x) & = & -1
-    \end{array} \\
+    \end{array} \right.\\
     \Leftrightarrow
     \left\{ \begin{array}{rccl}
       x_1&=&\dfrac{1}{2}\pi&  \\\\
       x_2&=&\dfrac{3}{2}\pi&
-    \end{array} 
-
-    \Rightarrow \mathbb{L} &= \left \{ \left( \dfrac{1}{2} \pi \middle| 0 \right) ; \left( \dfrac{3}{2} \pi \middle| 0 \right) \right\}
+    \end{array} \right.\\
+    \Rightarrow \mathbb{L} &= \left \{ \left ( \dfrac{1}{2} \pi \middle| 0 \right ) ; \left ( \dfrac{3}{2} \pi \middle| 0 \right ) \right \}
   \end{align*}
 \end{minipage}
 \vline
@@ -291,7 +290,7 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
       f'''(x)&=-8(\cos(x)\cos(x)-\sin(x)\sin(x))+2\sin(x)\\
       &=-8(1-\sin^2(x)-\sin^2(x))+2\sin(x)\\
       &=16\sin^2(x)+2\sin(x)-8
-    \end{align*}#
+    \end{align*}
 \end{minipage}
 
 \textbf{Extremstellen}
@@ -301,9 +300,9 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
   
     $f'(x)=0$
 
-    $\Leftrightarrow4\sin^2(x)-2\sin(x)+2&=0$
+    $\Leftrightarrow 4\sin^2(x)-2\sin(x)+2=0$
 
-    Substitution: $y&=\sin(x)$
+    Substitution: $y=\sin(x)$
 
     $\Rightarrow4y^2-2y+2=0$
 
@@ -315,43 +314,45 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
     \left\{\begin{array}{rccl}
       \sin(x)&=\dfrac{2+\sqrt{20}}{-8}\\
       \sin(x)&=\dfrac{2-\sqrt{20}}{-8}
-    \end{array}\right
+    \end{array}\right.$
 
-    \Rightarrow\mathbb{L}=\left\{\dfrac{1}{6}\pi;\dfrac{5}{6}\pi;\dfrac{3}{2}\pi\right\}$
+    $\Rightarrow \mathbb{L} = \left \{ \dfrac{1}{6}\pi ; \dfrac{5}{6} \pi ; \dfrac{3}{2} \pi \right \}$
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
   \underline{Hinreichende Bedingung:}
 
-    $f''(x)&\neq0$\\
-    \Rightarrow
+    $f''(x)\neq 0$
+
+    $\Rightarrow
     \left\{\begin{array}{rccl}
       f''\left(\dfrac{1}{6}\pi\right)&\stackrel{?}{=}0\\\\
       f''\left(\dfrac{5}{6}\pi\right)&\stackrel{?}{=}0\\\\
       f''\left(\dfrac{3}{2}\pi\right)&\stackrel{?}{=}0
-    \end{array}\right\\
+    \end{array}\right.\\
     \Leftrightarrow
     \left\{\begin{array}{rccl}
       8\sin\left(\dfrac{1}{6}\pi\right)\cos\left(\dfrac{1}{6}\pi\right)-2\sin\left(\dfrac{1}{6}\pi\right)&\stackrel{?}{=}0\\\\
       8\sin\left(\dfrac{5}{6}\pi\right)\cos\left(\dfrac{5}{6}\pi\right)-2\sin\left(\dfrac{5}{6}\pi\right)&\stackrel{?}{=}0\\\\
       8\sin\left(\dfrac{3}{2}\pi\right)\cos\left(\dfrac{3}{2}\pi\right)-2\sin\left(\dfrac{3}{2}\pi\right)&\stackrel{?}{=}0
-    \end{array}\right\\
+    \end{array}\right.\\
     \Leftrightarrow
     \left\{\begin{array}{rccl}
       8*\dfrac{1}{2}*\dfrac{\sqrt{3}}{2}-2*\dfrac{\sqrt{3}}{2}&\stackrel{!}{\neq}&0&,  <0 \Rightarrow HP\\
       8*\dfrac{1}{2}*-\dfrac{\sqrt{3}}{2}-2*-\dfrac{\sqrt{3}}{2}&\stackrel{!}{\neq}&0&,  >0 \Rightarrow TP\\
       8*(-1)(0)-2(0)&\stackrel{!}{=}&0& \Rightarrow \text{kein } EP
-    \end{array}\right\\
+    \end{array}\right.$
 \end{minipage}
 \underline{Ergebnis}\\
 Auf dem Intervall $[0;2\pi]$  besitzt K den Hochpunkt H$\left(\dfrac{1}{6}\pi|f\left(\dfrac{1}{6}\pi\right)\right)$ und den Tiefpunk T$\left(\dfrac{5}{6}\pi|f\left(\dfrac{5}{6}\pi\right)\right)$.\\
 $\Leftrightarrow$ H$\left(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3}\right)$ und T$\left(\dfrac{5}{6}\pi|-\dfrac{3}{2}\sqrt{3}\right)$.
-\\\\
 
-\textbf{Wendestellen}\\
+
+\textbf{Wendestellen}
 
 \begin{minipage}[t]{0.5\textwidth}
-  \underline{Notwendige Bedingung:}\\
+  \underline{Notwendige Bedingung:}
+
   \begin{align*}
     f''(x)=0\\
     \Leftrightarrow -8\sin(x)\cos(x)-2\cos(x)=0\\
@@ -360,46 +361,50 @@ $\Leftrightarrow$ H$\left(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3}\right)$ und T$\le
     \left\{\begin{array}{rccl}
       \cos(x)&=&0\\
       \sin(x)&=&-\dfrac{1}{4}
-    \end{array}\right\\
-    \Rightarrow \mathbb{L}=\left\{\dfrac{1}{2}\pi;\dfrac{3}{2}\pi;\sim3,394;\sim6,031\right\}
+    \end{array}\right. \\
+    \Rightarrow \mathbb{L}=\left\{\dfrac{1}{2}\pi;\dfrac{3}{2}\pi;\sim3,394;\sim6,031 \right \}
   \end{align*}
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
-  \underline{Hinreichende Bedingung:}\\
-    $f'''(x)&\neq0$\\
-    \Rightarrow
-    \left\{\begin{array}{rccl}
-      f'''\left(\dfrac{1}{2}\pi\right)&\stackrel{?}{=}0\\\\
-      f'''\left(\dfrac{3}{2}\pi\right)&\stackrel{?}{=}0\\\\
-      f'''\left(3,394)&\stackrel{?}{=}0\\\\
-      f'''\left(6,031)&\stackrel{?}{=}0
-    \end{array}\right\\
+  \underline{Hinreichende Bedingung:}
+
+    $f'''(x) \neq 0$
+
+    $\Rightarrow
+    \left\{ \begin{array}{r l}
+      f'''\left(\dfrac{1}{2}\pi\right) & \stackrel{?}{=} 0 \\\\
+      f'''\left(\dfrac{3}{2}\pi\right) & \stackrel{?}{=} 0 \\\\
+      f'''(3,394) & \stackrel{?}{=} 0 \\\\
+      f'''(6,031) & \stackrel{?}{=} 0
+    \end{array} \right. \\
     \Leftrightarrow
-    \left\{\begin{array}{rccl}
-      16\sin^2\left(\dfrac{1}{2}\pi\right)+\sin\left(\dfrac{1}{2}\pi\right)-8&\stackrel{?}{=}0\\\\
-      16\sin^2\left(\dfrac{3}{2}\pi\right)+\sin\left(\dfrac{3}{2}\pi\right)-8&\stackrel{?}{=}0\\
-      16\sin^2(3,394)+\sin(3,394)-8&\stackrel{?}{=}0\\
-      16\sin^2(6,031)+\sin(6,031)-8&\stackrel{?}{=}0
-    \end{array}\right\\
+    \left\{\begin{array}{r l}
+      16 \sin^2 \left( \dfrac{1}{2} \pi \right) + \sin \left( \dfrac{1}{2} \pi \right) - 8 & \stackrel{?}{=}0 \\\\
+      16 \sin^2 \left( \dfrac{3}{2} \pi \right) + \sin \left( \dfrac{3}{2} \pi \right) - 8 & \stackrel{?}{=}0 \\
+      16 \sin^2(3,394)+ \sin(3,394)-8&\stackrel{?}{=}0 \\
+      16 \sin^2(6,031)+ \sin(6,031)-8&\stackrel{?}{=}0
+    \end{array} \right. \\
     \Leftrightarrow
-    \left\{\begin{array}{rccl}
-      16*1+1-8&\stackrel{!}{\neq}&0&,>0\Rightarrow WP\\
-      16*1-1-8&\stackrel{!}{\neq}&0&,>0\Rightarrow WP\\
-      -7,5&\stackrel{!}{=}&0&,<0\Rightarrow WP\\
-      -7,5&\stackrel{!}{=}&0&,<0\Rightarrow WP&
-    \end{array}\right\\
+    \left\{ \begin{array}{rccl}
+      16*1+1-8 & \stackrel{!}{\neq} & 0 & ,>0 \Rightarrow WP \\
+      16*1-1-8 & \stackrel{!}{\neq} & 0 & ,>0 \Rightarrow WP \\
+      -7,5 & \stackrel{!}{=} & 0 & ,< 0 \Rightarrow WP \\
+      -7,5 & \stackrel{!}{=} & 0 & ,< 0 \Rightarrow WP
+    \end{array}\right.$
 \end{minipage}
+
 \begin{Bemerkung}
-  Außerdem: $f'\left(\dfrac{3}{2}\pi\right)=0\Rightarrow$ Sattelpunkt
+  Außerdem: $f'\left( \dfrac{3}{2} \pi \right) =0\Rightarrow$ Sattelpunkt
 \end{Bemerkung}
 
-\underline{Ergebnis}\\
-Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi\middle|f\left(\dfrac{1}{2}\pi\right)\right)$, $(3,394|f(3,394))$, $(6,031|f(6,031))$ und den Sattelpunkt $\left(\dfrac{3}{2}\pi\middle|f\left(\dfrac{3}{2}\pi\right)\right)$.\\
-\Leftrightarrow $W_1\left(\dfrac{1}{2}\pi\middle|0\right)$, $W_2(3,394|-1,452)$, $W_3(6,031|1,452)$, $S\left(\dfrac{3}{2}\pi\middle|0\right)$.\\
-\\\\
+\underline{Ergebnis}
 
-\textbf{Schaubild}\\
+Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi\middle|f\left(\dfrac{1}{2}\pi\right)\right)$, $(3,394|f(3,394))$, $(6,031|f(6,031))$ und den Sattelpunkt $\left(\dfrac{3}{2}\pi\middle|f\left(\dfrac{3}{2}\pi\right)\right)$.\\
+$\Leftrightarrow W_1 \left(\dfrac{1}{2} \pi \middle|0 \right)$, $W_2(3,394|-1,452)$, $W_3(6,031|1,452)$, $S \left(\dfrac{3}{2}\pi \middle| 0 \right)$.
+
+
+\textbf{Schaubild}
 
 \definecolor{ccqqqq}{rgb}{0.8,0,0}
 \definecolor{cqcqcq}{rgb}{0.75,0.75,0.75}
@@ -418,9 +423,10 @@ Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi\m
   \clip(-0.62,-3.28) rectangle (7.22,3.26);
   \draw[line width=1.6pt,color=ccqqqq, smooth,samples=100,domain=-0.6249016652708163:7.217846281536262] plot(\x,{2*cos(((\x))*180/pi)+2*sin(((\x))*180/pi)*cos(((\x))*180/pi)});
 \end{tikzpicture}
-\\\\
 
-\textbf{Symmetrie}\\
+
+
+\textbf{Symmetrie}
 
 K ist punktsymmetrisch zu $W_1$, denn es gilt:
 \begin{align*}
@@ -438,4 +444,5 @@ K ist außerdem zu $S$ punktsymmetrisch, denn es gilt:
   \Leftrightarrow
   2\sin(x)+2\cos(x)\sin(x)&=-1*(-2\sin(x)-2\cos(x)\sin(x))
 \end{align*}
+
 \end{document}
