--- a/kap11.tex
+++ b/kap11.tex
@@ -311,10 +311,10 @@ Es handelt sich hierbei streng genommen auch um eine Substitution:
 \end{Theorem}
 
 \begin{Beweis}
-  Sei die Funktion $\varphi(x) = \( \displaystyle\int_{-x}^{x}f(t)dt = F(x)-F(-x)$ mit $F$, einer Stammfunktion von $f$. Also ist $\varphi$ auf
+  Sei die Funktion $\varphi(x) = {\displaystyle\int_{-x}^{x}} f(t)dt = F(x)-F(-x)$ mit $F$, einer Stammfunktion von $f$. Also ist $\varphi$ auf
   $I = [-x;x]$ differenzierbar und $\varphi'(x) = F'(x)-F'(-x)=f(x)+f(-x)$.\\
   \begin{itemize}
-    \item Wenn $f$ auf $I$ ungerade ist, gilt: $f(x)=-f(-x) \Rightarrow \varphi'(x) = 0$ und somit konstant. Deshalb gilt $\varphi(x)=\varphi'(x)=0$ auf $I$, was $\( \displaystyle\int_{-a}^{a} f(t)dt = 0$ beweist.
+    \item Wenn $f$ auf $I$ ungerade ist, gilt: $f(x)=-f(-x) \Rightarrow \varphi'(x) = 0$ und somit konstant. Deshalb gilt $\varphi(x)=\varphi'(x)=0$ auf $I$, was ${\displaystyle\int_{-a}^{a}} f(t)dt = 0$ beweist.
     \item Wenn $f$ gerade ist, gilt: $f(x)=f(-x) \Rightarrow \varphi'(x) = 2f(x)$. Also gilt für $\varphi(x)=\displaystyle{\int_0^x 2f(t)dt}$, einer Stammfunktion von $2f(x)$,  $\varphi(0)=0$, was $\displaystyle{\int_{-a}^{a} f(t)dt = 2\int_{0}^{a} f(t)dt }$ beweist.
   \end{itemize}
 \end{Beweis}
@@ -379,7 +379,7 @@ Bildhaft sieht das folgendermaßen aus:
   \end{tikzpicture}
 
   \begin{align*}
-    \textcolor{orange}{C}  &= \textcolor{lightblue}{A} + \textcolor{lightgree}{B}\\
+    \textcolor{orange}{C}  &= \textcolor{lightblu}{A} + \textcolor{lightgree}{B}\\
     &= |{\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx}| + |{\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}|
   \end{align*}
   
@@ -420,7 +420,7 @@ Bildhaft sieht das folgendermaßen aus:
   \end{tikzpicture}
 
   \begin{align*}
-    \textcolor{orange}{C} &= \textcolor{lightblue}{A} + \textcolor{lightgree}{B}\\
+    \textcolor{orange}{C} &= \textcolor{lightblu}{A} + \textcolor{lightgree}{B}\\
     &= {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx} + {\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}\\
     &= {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{b}} f(x)dx}
   \end{align*}
@@ -432,9 +432,9 @@ Bildhaft sieht das folgendermaßen aus:
 
   notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$
 
-  $\Leftrightarrow x^2(1-2x)&=0
+  $\Leftrightarrow x^2(1-2x)=0$
   
-  \stackrel{SdN}{\Leftrightarrow}
+  $\stackrel{SdN}{\Leftrightarrow}
   \left \{ \begin{array}{rcl}
   x^2&=0\\
   1-2x&=0
@@ -443,7 +443,7 @@ Bildhaft sieht das folgendermaßen aus:
   \left \{ \begin{array}{rcl}
   x_1&=0\\
   x_2&=\dfrac{1}{2}
-  \end{array}\right .$
+  \end{array} \right.$
 
   Also gilt:
   
@@ -511,7 +511,7 @@ Bildhaft sieht das folgendermaßen aus:
   \end{tikzpicture}
 \end{minipage}
 \begin{minipage}{0.2\textwidth}
-  \updownarrow
+  $\updownarrow$
 \end{minipage}
 \section{Uneigentliche Integrale}
 \begin{Definition}
