--- a/kap5/saetze.tex
+++ b/kap5/saetze.tex
@@ -28,9 +28,10 @@
   \end{minipage}
 \end{Theorem}
 \begin{Beweis}
-  Man modelliere die 3 Seiten durch Vektoren, $\vv{a}$, $\vv{b}$ und $\vv{c}$.\\
-  Es gilt: $$\vv{a} \cdot \vv{b} &= 0 $$
-  $$ a_1 b_1+a_2 b_2 &= 0 $$
+  Man modelliere die 3 Seiten durch Vektoren, $\vv{a}$, $\vv{b}$ und $\vv{c}$.
+
+  Es gilt: $$\vv{a} \cdot \vv{b} = 0 $$
+  $$ a_1 b_1+a_2 b_2 = 0 $$
   Außerdem:
   \begin{center}
     \begin{align*}
@@ -50,7 +51,7 @@
 \end{Bemerkung}
 \begin{Theorem}[Umkehrung]
   \begin{minipage}{0.5\textwidth}
-    Falls für ein Dreieck $\Delta ABC$ gilt:\\
+    Falls für ein Dreieck $\Delta ABC$ gilt:
     $$a^2+b^2=c^2$$
     Dann ist dieses Dreieck in $C$ rechtwinklig.
   \end{minipage}
@@ -77,6 +78,7 @@
     \end{tikzpicture}
   \end{minipage}
 \end{Theorem}
+
 \begin{Beweis}
   Sind Äquivalenzumformungen nicht schön?
 \end{Beweis}
@@ -84,7 +86,7 @@
 \subsection{Euklids Sätze}
 \begin{Theorem}[Kathetensatz]
   \begin{minipage}{0.5\textwidth}
-  In einem in $C$ rechtwinkligen Dreieck $\Delta ABC$ mit $h$ der Höhe zu $C$ gilt:\\
+    In einem in $C$ rechtwinkligen Dreieck $\Delta ABC$ mit $h$ der Höhe zu $C$ gilt:
     \begin{itemize}
       \item $a^2 = p \cdot c$
       \item $b^2 = q \cdot c$
@@ -231,22 +233,24 @@
         |\vv{BA}| &= k\cdot |\vv{MA}|\\
         |\vv{AC}| &= k\cdot |\vv{AN}|\\
         |\vv{BC}| &= k\cdot |\vv{MN}|
-    \end{array}$
-    \Leftrightarrow
-    \left\{\begin{array}{rcl}
+    \end{array} \right.$
+
+    $\Leftrightarrow$
+
+    $\left\{\begin{array}{rcl}
         \dfrac{|\vv{BA}|}{|\vv{MA}|} &= k\\
         \dfrac{|\vv{AC}|}{|\vv{AN}|} &= k\\
         \dfrac{|\vv{BC}|}{|\vv{MN}|} &= k
-    \end{array}$
+    \end{array} \right.$
   \end{center}
-  \Leftrightarrow \dfrac{|\vv{BA}|}{|\vv{MA}|} = \dfrac{|\vv{AC}|}{|\vv{AN}|} = \dfrac{|\vv{BC}|}{|\vv{MN}|}
-  \Leftrightarrow \dfrac{|\vv{MA}|}{|\vv{BA}|} = \dfrac{|\vv{AN}|}{|\vv{AC}|} = \dfrac{|\vv{MN}|}{|\vv{BC}|}
-  $
+  $\Leftrightarrow \dfrac{|\vv{BA}|}{|\vv{MA}|} = \dfrac{|\vv{AC}|}{|\vv{AN}|} = \dfrac{|\vv{BC}|}{|\vv{MN}|}$
+  $\Leftrightarrow \dfrac{|\vv{MA}|}{|\vv{BA}|} = \dfrac{|\vv{AN}|}{|\vv{AC}|} = \dfrac{|\vv{MN}|}{|\vv{BC}|}$
 \end{Beweis}
 
 \begin{Theorem}[Umkehrung]
   \begin{minipage}{0.5\textwidth}
-  Sei ein Dreieck $\Delta ABC$ mit M einem Punkt der Geraden $(AB)$ und N einem Punkt der Geraden $(AC)$. Wenn gilt:\\
+  Sei ein Dreieck $\Delta ABC$ mit M einem Punkt der Geraden $(AB)$ und N einem Punkt der Geraden $(AC)$. Wenn gilt:
+
   $$\dfrac{AB}{AC}=\dfrac{AM}{AN}$$
     Dann ist $(BC)//(MN)$.
   \end{minipage}
@@ -274,14 +278,19 @@
     \end{center}
   \end{minipage}
 \end{Theorem}
+
 \begin{Beweis}
   Auch hier profitieren wir von Äquivalenzumformungen.
 \end{Beweis}
 
 \subsection{Der Satz des Apollonios}
+\begin{small}
+  
 \begin{Theorem}
   \begin{minipage}[t]{0.5\textwidth}
-    Gegeben sind: Eine Strecke $[AB]$ und eine positive Zahl $\lambda \in \R^{+} \backslash \{1\}$. Dann ist die Punktmenge $$M_{A}=\left\{ X \left| \dfrac{\overline{AX}} {\overline{BX}}=\lambda \right\}$$ ein Kreis, den man \textbf{Kreis des Apollonios} nennt.
+    Gegeben sind: Eine Strecke $[AB]$ und eine positive Zahl $\lambda \in \R^{+} \backslash \{1\}$. Dann ist die Punktmenge
+    $$M_{A}=\left\{ X \middle| \dfrac{\overline{AX}} {\overline{BX}}=\lambda \right\}$$
+    ein Kreis, den man \textbf{Kreis des Apollonius} nennt.
   \end{minipage}
   \begin{minipage}[t]{0.5\textwidth}
     \center{Anschaulich:}\\
@@ -307,95 +316,92 @@
     \end{tikzpicture}
   \end{minipage}
 \end{Theorem}
-\begin{\small}
+
 \begin{Beweis}
-\begin{small}
-  Anfangen kann man den den Beweis damit, dass man zwei Punkte sucht, die die Bedingung erfüllen \textbf{und} auf der Geraden $AB$ liegen. Logisch ist, dass einer dieser Punkte zwischen $A$ und $B$ sein wird, dieser wird \textbf{innerer Teilungspunkt} $T_{i}$ genannt. Der andere Punkt liegt au"serhalb der Strecke $[AB]$ und wird \textbf{"au"serer Teilungspunkt} $T_{a}$ genannt. \\
+  Anfangen kann man den den Beweis damit, dass man zwei Punkte sucht, die die Bedingung erfüllen \textbf{und} auf der Geraden $AB$ liegen. Logisch ist, dass einer dieser Punkte zwischen $A$ und $B$ sein wird, dieser wird \textbf{innerer Teilungspunkt} $T_{i}$ genannt. Der andere Punkt liegt außerhalb der Strecke $[AB]$ und wird \textbf{"außerer Teilungspunkt} $T_{a}$ genannt. 
+
   Im letzten Schritt des Beweises wird man anhand des Skalarprodukts zeigen, dass für alle Punkte $X$, die ebenfalls die Verh"altnisgleichung erfüllen, die Vektoren $\vv{T_{i}X}$ und $\vv{T_{a}X}$ orthogonal zueinander sind. Somit liegen diese Punkte auf dem Thaleskreis (frz.: Theoreme du triangle rectangle) über $T_{i}$ und $T_{a}$, der dann \textbf{Apolliniuskreis} genannt wird.\\
-\end{small}
-\begin{enumerate}
-  \item
-  Für möglichst einfache Koordinaten platziert man $A$ auf den Origo, $[AB]$ entlang der $x$-Achse, und kürzt $\overline{AB}$ mit $b$ ab. Gleicherma"sen verf"ahrt man mit den L"angen $\overline{AT_{i}}=t_{i}$ und $\overline{AT_{a}}= t_{a}$, und man führt den Punkt $X(x|y)$ ein.\\
-  Hier nochmal ein überblick:
-  \begin{center}
-    \vartriangleright $A(0|0)$ \qquad \vartriangleright $B(b|0)$ \qquad \vartriangleright $T_{i}(t_{i}|0)$ \qquad \vartriangleright $T_{a}(t_{a}|0)$ \qquad \vartriangleright $X(x|y)$
-  \end{center}
 
-  \item
-    Nun gilt:
-    
-    \begin{minipage}[t]{0.5\textwidth}
-      $\begin{array}{rccl}
-        & \dfrac{\overline{AT_{i}}}{\overline{T_{i}B}} & = & \lambda \\
-         \Leftrightarrow & \dfrac{t_{i}}{b-t_{i}} & = & \lambda \\
-         \Leftrightarrow & t_{i} & = & \lambda \cdot b - \lambda \cdot t_{i} \\
-         \Leftrightarrow & \lambda \cdot t_{i} + t_{i} & = & \lambda \cdot b \\
-         \Leftrightarrow & (\lambda + 1)\cdot t_{i} & = & \lambda \cdot b \\
-         \Leftrightarrow & t_{i} & = & \dfrac {\lambda}{\lambda +1}\cdot b 
-      \end{array}$
-      \end{minipage}
+  \begin{enumerate}
+    \item
+      Für möglichst einfache Koordinaten platziert man $A$ auf den Origo, $[AB]$ entlang der $x$-Achse, und kürzt $\overline{AB}$ mit $b$ ab. Gleichermaßen verfährt man mit den Längen $\overline{AT_{i}}=t_{i}$ und $\overline{AT_{a}}= t_{a}$, und man führt den Punkt $X(x|y)$ ein.
+
+      Hier nochmal ein überblick:
+      $$\vartriangleright A(0|0) \qquad \vartriangleright B(b|0) \qquad \vartriangleright T_{i}(t_{i}|0) \qquad \vartriangleright T_{a}(t_{a}|0) \qquad \vartriangleright X(x|y)$$
+
+    \item
+      Nun gilt:
+      
       \begin{minipage}[t]{0.5\textwidth}
-      $\begin{array}{rccl}
-        & \dfrac{\overline{AT_{a}}}{\overline{T_{a}B}} & = & \lambda \\
-        \Leftrightarrow & \dfrac{t_{a}}{t_{a}-b} & = & \lambda \\
-        \Leftrightarrow & t_{a} & = & \lambda \cdot t_{a} - \lambda \cdot b \\
-        \Leftrightarrow & \lambda \cdot t_{a} - t_{a} & = & \lambda \cdot b \\
-        \Leftrightarrow & (\lambda -1 \cdot )t_{a} & = & \lambda \cdot b \\
-        \Leftrightarrow & t_{a} & = & \dfrac{\lambda}{\lambda -1}\cdot b \\
+        $\begin{array}{rccl}
+          & \dfrac{\overline{AT_{i}}}{\overline{T_{i}B}} & = & \lambda \\
+          \Leftrightarrow & \dfrac{t_{i}}{b-t_{i}} & = & \lambda \\
+          \Leftrightarrow & t_{i} & = & \lambda \cdot b - \lambda \cdot t_{i} \\
+          \Leftrightarrow & \lambda \cdot t_{i} + t_{i} & = & \lambda \cdot b \\
+          \Leftrightarrow & (\lambda + 1)\cdot t_{i} & = & \lambda \cdot b \\
+          \Leftrightarrow & t_{i} & = & \dfrac {\lambda}{\lambda +1}\cdot b 
+        \end{array}$
+        \end{minipage}
+        \begin{minipage}[t]{0.5\textwidth}
+        $\begin{array}{rccl}
+          & \dfrac{\overline{AT_{a}}}{\overline{T_{a}B}} & = & \lambda \\
+          \Leftrightarrow & \dfrac{t_{a}}{t_{a}-b} & = & \lambda \\
+          \Leftrightarrow & t_{a} & = & \lambda \cdot t_{a} - \lambda \cdot b \\
+          \Leftrightarrow & \lambda \cdot t_{a} - t_{a} & = & \lambda \cdot b \\
+          \Leftrightarrow & (\lambda -1 \cdot )t_{a} & = & \lambda \cdot b \\
+          \Leftrightarrow & t_{a} & = & \dfrac{\lambda}{\lambda -1}\cdot b \\
+        \end{array}$
+      \end{minipage}
+
+      \begin{itemize}
+        \item
+        $t_{i} + t_{a} = \dfrac {\lambda}{\lambda +1}\cdot b + \dfrac {\lambda}{\lambda -1}\cdot b  =(\dfrac{\lambda}{\lambda+1} + \dfrac{\lambda}{\lambda-1})\cdot b=\dfrac{\lambda^2}{\lambda^2 -1}\cdot 2b $\qquad \textcolor{red}{(1)}
+        \item
+        $t_{i} \cdot t_{a} =\dfrac {\lambda}{\lambda +1}\cdot b \cdot \dfrac {\lambda}{\lambda +1}\cdot b =\dfrac{\lambda^2}{\lambda^2 -1}\cdot b^2$ \qquad \textcolor{red}{(2)}
+      \end{itemize}
+
+      Diese Zusammenänge werden gleich benötigt.
+
+    \item
+      Jetzt wo wir $T_{i}$ und $T_{a}$ in Abhängigkeit von $b$ und $\lambda$ bestimmt haben, kann man die Vorraussetzung auch noch auf den Punkt $X$ anwenden.\\
+      $\begin{array}{rccll}
+                          & \dfrac{\overline{AX}}{\overline{XB}}        & = & \lambda \\
+        \Leftrightarrow & \dfrac{(\overline{AX})^2}{(\overline{XB})^2}& = & \lambda^2 \\
+        \Leftrightarrow & \dfrac{x^2+y^2}{(x-b)^2+y^2}                & = & \lambda^2 \\
+        \Leftrightarrow & x^2+y^2                                     & = & \lambda^2 \cdot [(x-b)^2+y^2] \\
+        \Leftrightarrow & 0                                           & = & \lambda^2 \cdot (x-b)^2 +\lambda^2 y^2 -x^2 -y^2 \\
+                          &                                               & = & x^2\cdot \lambda^2 - 2bx\cdot \lambda^2 +b^2\cdot \lambda^2 +y^2\cdot \lambda^2 -x^2-y^2  \textcolor{red}{(3)}
       \end{array}$
-    \end{minipage}
-
-    \begin{itemize}
-      \item
-      $t_{i} + t_{a} = \dfrac {\lambda}{\lambda +1}\cdot b + \dfrac {\lambda}{\lambda -1}\cdot b  =(\dfrac{\lambda}{\lambda+1} + \dfrac{\lambda}{\lambda-1})\cdot b=\dfrac{\lambda^2}{\lambda^2 -1}\cdot 2b $\qquad \textcolor{red}{(1)}
-      \item
-      $t_{i} \cdot t_{a} =\dfrac {\lambda}{\lambda +1}\cdot b \cdot \dfrac {\lambda}{\lambda +1}\cdot b =\dfrac{\lambda^2}{\lambda^2 -1}\cdot b^2$ \qquad \textcolor{red}{(2)}
-    \end{itemize}
-
-    Diese Zusammenänge werden gleich benötigt.
 
 
-  \item
-  Jetzt wo wir $T_{i}$ und $T_{a}$ in Abh"angigkeit von $b$ und $\lambda$ bestimmt haben, kann man die Vorraussetzung auch noch auf den Punkt $X$ anwenden.\\
-  $\begin{array}{rccll}
-                      & \dfrac{\overline{AX}}{\overline{XB}}        & = & \lambda \\
-    \Leftrightarrow & \dfrac{(\overline{AX})^2}{(\overline{XB})^2}& = & \lambda^2 \\
-    \Leftrightarrow & \dfrac{x^2+y^2}{(x-b)^2+y^2}                & = & \lambda^2 \\
-    \Leftrightarrow & x^2+y^2                                     & = & \lambda^2 \cdtot [(x-b)^2+y^2] \\
-    \Leftrightarrow & 0                                           & = & \lambda^2 \cdot (x-b)^2 +\lambda^2 y^2 -x^2 -y^2 \\
-                      &                                               & = & x^2\cdot \lambda^2 - 2bx\cdot \lambda^2 +b^2\cdot \lambda^2 +y^2\cdot \lambda^2 -x^2-y^2  \textcolor{red}{(3)}
-  \end{array}$
+    \item
+      Jetzt prüft man auf Orthogonalität zwischen $\vv{T_{i}X} = \left(\begin{array}{c} x-t_{i} \\ y \end{array}\right); \vv{T_{a}X} = \left(\begin{array}{c} x-t_{a} \\ y \end{array}\right)$.
+      $$\begin{array}{rccl}
+        \vv{T_{i}X} \cdot \vv{T_{a}X} & = & (x-t_{i})\cdot (x-t_{a}) +y^2                                                                                       & \\
+                                      & = & x^2 -(t_{i} +t_{a})x + t_{i}\cdot t_{a} + y^2                                                                       & \text{Benutze (1) und (2)} \\
+                                      & = & x^2 - \dfrac{\lambda^2}{\lambda^2 - 1} \cdot 2bx + \dfrac{\lambda^2}{\lambda^2 - 1} \cdot b^2 +y^2                  & \\
+                                      & = & \dfrac{x^2 \cdot (\lambda^2 -1) - 2bx\cdot \lambda^2 + b^2\cdot \lambda^2 + y^2 \cdot (\lambda^2 -1)}{\lambda^2 -1} & \\
+                                      & = & \dfrac{x^2 \cdot \lambda^2 - 2bx\cdot \lambda^2 b^2\cdot \lambda^2 +y^2\cdot \lambda^2 -x^2 -y^2} {\lambda^2 -1}    & \text{Benutze (3)} \\
+                                      & = & 0                                                                                                                   & \\
+      \end{array}$$
 
-
-  \item
-  Jetzt prüft man auf Orthogonalität zwischen $\vv{T_{i}X} = \left(\begin{array}{c} x-t_{i} \\ y \end{array}\right); \vv{T_{a}X} = \left(\begin{array}{c} x-t_{a} \\ y \end{array}\right)$.\\
-  \begin{center}
-  $\begin{array}{rccl}
-    \vv{T_{i}X} \cdot \vv{T_{a}X} & = & (x-t_{i})\cdot (x-t_{a}) +y^2                                                                                       & \\
-                                  & = & x^2 -(t_{i} +t_{a})x + t_{i}\cdot t_{a} + y^2                                                                       & \text{Benutze (1) und (2)} \\
-                                  & = & x^2 - \dfrac{\lambda^2}{\lambda^2 - 1} \cdot 2bx + \dfrac{\lambda^2}{\lambda^2 - 1} \cdot b^2 +y^2                  & \\
-                                  & = & \dfrac{x^2 \cdot (\lambda^2 -1) - 2bx\cdot \lambda^2 + b^2\cdot \lambda^2 + y^2 \cdot (\lambda^2 -1)}{\lambda^2 -1} & \\
-                                  & = & \dfrac{x^2 \cdot \lambda^2 - 2bx\cdot \lambda^2 b^2\cdot \lambda^2 +y^2\cdot \lambda^2 -x^2 -y^2} {\lambda^2 -1}    & \text{Benutze (3)} \\
-                                  & = & 0                                                                                                                   & \\
-  \end{array}$
-  \end{center}
-
-  $\Rightarrow$ Man hat bewiesen, dass für alle Punkte X die Vektoren T i X und T a X orthogonal zueinander sind, weshalb sie auf dem Thaleskreis über T i und T a liegen müssen.
+      $\Rightarrow$ Man hat bewiesen, dass für alle Punkte X die Vektoren T i X und T a X orthogonal zueinander sind, weshalb sie auf dem Thaleskreis über T i und T a liegen müssen.
   \end{enumerate}
 \end{Beweis}
+
 
 \begin{Bemerkung}
   \begin{minipage}{0.5\textwidth}
     \includegraphics[width=8cm]{kap5/Apollinius_Winkel}
   \end{minipage}
   \begin{minipage}{0.5\textwidth}
-    Die Figur und die Zusammenh"ange, die man durch den Satz des Apollonios erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen:
+    Die Figur und die Zusammenhänge, die man durch den Satz des Apollonios erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen:
   \end{minipage}\\
-  Über diese 10 Winkel lassen sich einige Beziehungen aufstellen:\\
-  $\begin{array}{rcccl}
-    \vartriangleright \alpha + \beta + \gamma = 180  & \vartriangleright \beta + \gamma_{2} + \delta_{2} = \ang{180}  & \vartriangleright \delta_{1} + \delta_{2} = \ang{180}  & \vartriangleright \alpha + \gamma + \epsilon + \zeta = \ang{180}  &\vartriangleright \epsilon + \zeta + \eta = \ang{180}\\
-    \vartriangleright \aplha + \gamma_{1} + \delta_{1} = \ang{180}  & \vartriangleright \gamma_{1} + \gamma_{2} = \gamma  & \vartriangleright \gamma_{2} + \epsilon = \ang{90}  & \vartriangleright \beta + \eta = \ang{180}  &\vartriangleright \gamma_{2} + \delta_{2} + \epsilon + \zeta = \ang{180}
-  \end{array}$
+  Über diese 10 Winkel lassen sich einige Beziehungen aufstellen:
+  $$\begin{array}{rcccl}
+    \vartriangleright \alpha + \beta + \gamma = 180  & \vartriangleright \beta + \gamma_{2} + \delta_{2} = 180°  & \vartriangleright \delta_{1} + \delta_{2} = 180°  & \vartriangleright \alpha + \gamma + \epsilon + \zeta = 180°  &\vartriangleright \epsilon + \zeta + \eta = 180°\\
+    \vartriangleright \alpha + \gamma_{1} + \delta_{1} = 180°  & \vartriangleright \gamma_{1} + \gamma_{2} = \gamma  & \vartriangleright \gamma_{2} + \epsilon = 90° & \vartriangleright \beta + \eta = 180°  &\vartriangleright \gamma_{2} + \delta_{2} + \epsilon + \zeta = 180°
+  \end{array}$$
   
   Löst man dieses Gleichungssystem, erhält man $\gamma_{1} = \gamma_{2}$, was bedeutet, dass die Gerade $T_{i}X$ Winkelhalbierende des Winkels $\gamma = \angle AXB$ ist.
 \end{Bemerkung}
